--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
-    "mongoose": "^8.9.2",
-    "next": "15.1.2",
+    "mongoose": "8.9.5",
+    "next": "15.4.2",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
