--- a/helm/templates/argocd-ingress.yaml
+++ b/helm/templates/argocd-ingress.yaml
@@ -7,6 +7,7 @@ metadata:
   namespace: argocd
 spec:
   entryPoints:
+    - web
     - websecure
   routes:
     - kind: Rule
@@ -22,6 +23,4 @@ spec:
         - name: argocd-server
           port: 80
           scheme: h2c
-  tls:
-    certResolver: letsencrypt-prod
 {{- end }}
